--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
-spring.application.name=techchallenge4
+spring.application.name=techchallenge4-pedidos
+
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost:5434}/tech_challenge_4_pedidos
+
+spring.datasource.username=${POSTGRES_USERNAME:root}
+spring.datasource.password=${POSTGRES_PASSWORD:root}
+
+#Teste de conectividade e credenciais do banco de dados
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#Permite carregamento LAZY
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
