--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #Permite carregamento LAZY
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
