--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.cloud.stream.bindings.atualiza-in-0.destination=pedido-atualiza-status
