--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -18,11 +18,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #Permite carregamento LAZY
 %test.spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-spring.batch.jdbc.initialize-schema=always
-
-spring.batch.job.enabled=false
-
 spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+spring.cloud.stream.bindings.atualiza-in-0.destination=pedido-atualiza-status
